docker/dev/aws.tf
module "aws_vpc" {
  source              = "./modules/aws/vpc"

  prefix              = var.prefix
  vpc_cidr_block      = var.aws_vpc_cidr
  public_subnets      = [var.aws_public_subnet_azone_cidr, var.aws_public_subnet_czone_cidr]
  private_subnets     = [var.aws_private_subnet_1, var.aws_private_subnet_2, var.aws_private_subnet_3, var.aws_private_subnet_4]
  azs                 = [var.aws_azone_az, var.aws_czone_az, var.aws_azone_az, var.aws_czone_az]

  enable_nat_gateway  = true
  single_nat_gateway  = true
}

########################################################################

resource "aws_key_pair" "key" {
  key_name   = "ssmu-key"
  public_key = base64decode(var.public_key_base64)
}

resource "aws_iam_role" "ec2_admin_role" {
  name = "admin-role-${var.prefix}"

  assume_role_policy = jsonencode({
    Version = "2012-10-17",
    Statement = [{
      Effect = "Allow",
      Principal = {
        Service = "ec2.amazonaws.com"
      },
      Action = "sts:AssumeRole"
    }]
  })
}

resource "aws_iam_role_policy_attachment" "admin_policy_attach" {
  role       = aws_iam_role.ec2_admin_role.name
  policy_arn = "arn:aws:iam::aws:policy/AdministratorAccess"
}

resource "aws_iam_instance_profile" "ec2_instance_profile" {
  name = "profile-${var.prefix}"
  role = aws_iam_role.ec2_admin_role.name
}

########################################################################

# openvpn

resource "aws_security_group" "sg_openvpn" {
  name        = "SG-${var.prefix}-openvpn"
  description = "Allow OpenVPN traffic"
  vpc_id      = module.aws_vpc.vpc_id

  ingress {
    from_port   = 1194
    to_port     = 1194
    protocol    = "udp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 943
    to_port     = 943
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = var.ssmu_access_cidr_blocks
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "sg-openvpn-${var.prefix}"
  }
}

resource "aws_instance" "openvpn" {
  ami                         = "ami-0da165fc7156630d7" # OpenVPN Access Server (5 Connected Devices) / Self-Hosted VPN
  instance_type               = "t2.medium"
  subnet_id                   = module.aws_vpc.public_subnet_ids[0]
  associate_public_ip_address = true
  key_name                    = aws_key_pair.key.key_name
  iam_instance_profile        = aws_iam_instance_profile.ec2_instance_profile.name
  security_groups             = [aws_security_group.sg_openvpn.id]
  
  user_data = templatefile("${path.module}/scripts/ec2-openvpn-setup.tpl", {
    openvpn_pw   = var.openvpn_pw
  })

  depends_on = [module.aws_vpc]
  
  tags = {
    Name = "ec2-${var.prefix}-azone-openvpn"
  }
}

resource "aws_eip_association" "eip_assoc" {
  allocation_id = data.aws_eip.existing_eip.id
  instance_id   = aws_instance.openvpn.id
}

########################################################################

# service

resource "aws_security_group" "sg_service" {
  name        = "SG-${var.prefix}-service"
  description = "Allow SSH, HTTP, HTTPS, MySQL, Scouter, FE, BE"
  vpc_id      = module.aws_vpc.vpc_id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 3000
    to_port     = 3000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 3306
    to_port     = 3306
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 5000
    to_port     = 5000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 6100
    to_port     = 6100
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "sg-service-${var.prefix}"
  }
}

resource "aws_instance" "service_azone" {
  ami                         = "ami-0d5bb3742db8fc264"
  instance_type               = "t3.medium"
  subnet_id                   = module.aws_vpc.private_subnet_ids[0]
  associate_public_ip_address = false
  key_name                    = aws_key_pair.key.key_name
  iam_instance_profile        = aws_iam_instance_profile.ec2_instance_profile.name
  security_groups             = [aws_security_group.sg_service.id]
  private_ip                  = "192.168.110.10"

  root_block_device {
    volume_size = 20
    volume_type = "gp3"
  }
  
  user_data = templatefile("${path.module}/scripts/ec2-service-setup.tpl", {
    public_nopass_key_base64  = var.public_nopass_key_base64
    SSH_KEY_BASE64_NOPASS     = var.SSH_KEY_BASE64_NOPASS
    ECR_REGISTRY              = var.ECR_REGISTRY
    AWS_DEFAULT_REGION        = var.AWS_DEFAULT_REGION
    DEV_TFVARS_ENC_PW         = var.DEV_TFVARS_ENC_PW
  })
  depends_on = [module.aws_vpc]

  tags = {
    Name = "ec2-${var.prefix}-azone-service"
  }
}

########################################################################

# Wait for service to be ready
# resource "null_resource" "wait_for_service_ready" {
#   provisioner "local-exec" {
#     interpreter = ["/bin/bash", "-c"]
#     command = <<EOT
#       for i in {1..60}; do
#         VALUE=$(aws ssm get-parameter --name "/careerbee/dev/service" --region ap-northeast-2 --query "Parameter.Value" --output text 2>/dev/null || echo "notyet")
#         if [ "$VALUE" == "ready" ]; then
#           echo "Service is ready"
#           exit 0
#         fi
#         echo "Waiting for Service to be ready..."
#         sleep 10
#       done
#       echo "Timeout waiting for Service readiness"
#       exit 1
#   EOT
#   }
# }

# AMI 생성
# resource "aws_ami_from_instance" "service_ami" {
#   name               = "ami-${var.prefix}-${formatdate("2025-06-25-150723", timestamp())}"
#   source_instance_id = aws_instance.service_azone.id
#   description        = "AMI created from existing instance"
#   lifecycle {
#     create_before_destroy = true
#   }
#   depends_on = [null_resource.wait_for_service_ready]
# }

########################################################################

# AutoScaling

# resource "aws_launch_template" "service_lt" {
#   name_prefix   = "lt-${var.prefix}-service"
#   image_id      = aws_ami_from_instance.service_ami.id
#   instance_type = "t3.medium"
#   key_name      = aws_key_pair.key.key_name

#   iam_instance_profile {
#     name = aws_iam_instance_profile.ec2_instance_profile.name
#   }

#   vpc_security_group_ids = [aws_security_group.sg_service.id]

#   user_data = base64encode(templatefile("${path.module}/scripts/ec2-service-lt-setup.tpl", {
#     ECR_REGISTRY              = var.ECR_REGISTRY
#     AWS_DEFAULT_REGION        = var.AWS_DEFAULT_REGION
#   }))

#   lifecycle {
#     create_before_destroy = true
#   }

#   tag_specifications {
#     resource_type = "instance"
#     tags = {
#       Name = "ec2-${var.prefix}-service-asg"
#     }
#   }
# }

# resource "aws_autoscaling_group" "service_asg" {
#   name                      = "asg-${var.prefix}-service"
#   desired_capacity          = 0
#   min_size                  = 0
#   max_size                  = 4
#   vpc_zone_identifier       = [module.aws_vpc.private_subnet_ids[0]]
#   health_check_type         = "EC2"
#   health_check_grace_period = 180
#   force_delete              = true

#   launch_template {
#     id      = aws_launch_template.service_lt.id
#     version = "$Latest"
#   }

#   target_group_arns = [aws_lb_target_group.nginx_target_group.arn]

#   tag {
#     key                 = "Name"
#     value               = "asg-${var.prefix}-service"
#     propagate_at_launch = true
#   }

#   depends_on = [aws_lb_target_group.nginx_target_group]
# }

# resource "aws_autoscaling_policy" "scale_on_cpu" {
#   name                   = "scale-on-cpu-${var.prefix}"
#   policy_type            = "TargetTrackingScaling"
#   autoscaling_group_name = aws_autoscaling_group.service_asg.name

#   target_tracking_configuration {
#     predefined_metric_specification {
#       predefined_metric_type = "ASGAverageCPUUtilization"
#     }

#     target_value = 50.0
#   }
# }

########################################################################

# DB

resource "aws_security_group" "sg_db" {
  name        = "SG-${var.prefix}-db"
  description = "Allow MySQL access from EC2 only"
  vpc_id      = module.aws_vpc.vpc_id

  ingress {
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    security_groups = [aws_security_group.sg_service.id]  # EC2가 속한 SG
  }

  ingress {
    from_port       = 3306
    to_port         = 3306
    protocol        = "tcp"
    security_groups = [aws_security_group.sg_service.id]  # EC2가 속한 SG
  }

  ingress {
    from_port       = 6379
    to_port         = 6379
    protocol        = "tcp"
    security_groups = [aws_security_group.sg_service.id] # EC2가 속한 SG
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "sg-db-${var.prefix}"
  }
}

resource "aws_instance" "db_azone" {
  ami                         = "ami-0d5bb3742db8fc264"
  instance_type               = "t3.medium"
  subnet_id                   = module.aws_vpc.private_subnet_ids[2]
  associate_public_ip_address = false
  key_name                    = aws_key_pair.key.key_name
  iam_instance_profile        = aws_iam_instance_profile.ec2_instance_profile.name
  security_groups             = [aws_security_group.sg_db.id]
  private_ip                  = "192.168.210.10"

  user_data = templatefile("${path.module}/scripts/ec2-db-setup.tpl", {
    public_nopass_key_base64  = var.public_nopass_key_base64
    SSH_KEY_BASE64_NOPASS     = var.SSH_KEY_BASE64_NOPASS
    DB_NAME                   = var.DB_NAME
    DB_USERNAME               = var.DB_USERNAME
    DB_PASSWORD               = var.DB_PASSWORD
  })    
  depends_on = [module.aws_vpc]
  
  tags = {
    Name = "ec2-${var.prefix}-azone-db"
  }
}

resource "aws_instance" "db_replica_azone" {
  ami                         = "ami-0d5bb3742db8fc264"
  instance_type               = "t3.medium"
  subnet_id                   = module.aws_vpc.private_subnet_ids[2]
  associate_public_ip_address = false
  key_name                    = aws_key_pair.key.key_name
  iam_instance_profile        = aws_iam_instance_profile.ec2_instance_profile.name
  security_groups             = [aws_security_group.sg_db.id]
  private_ip                  = "192.168.210.20"

  user_data = templatefile("${path.module}/scripts/ec2-db-replica-setup.tpl", {
    public_nopass_key_base64  = var.public_nopass_key_base64
    SSH_KEY_BASE64_NOPASS     = var.SSH_KEY_BASE64_NOPASS
    DB_PASSWORD               = var.DB_PASSWORD
    DB_USERNAME               = var.DB_USERNAME
  })    
  depends_on = [module.aws_vpc]
  
  tags = {
    Name = "ec2-${var.prefix}-azone-db-replica"
  }
}

########################################################################

# ALB

resource "aws_security_group" "sg_alb" {
  name        = "SG-${var.prefix}-alb"
  description = "Allow HTTP and HTTPS access to ALB"
  vpc_id      = module.aws_vpc.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "sg-${var.prefix}-alb"
  }
}

resource "aws_lb" "alb" {
  name               = "alb-${var.prefix}"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.sg_alb.id]
  subnets            = module.aws_vpc.public_subnet_ids

  tags = {
    Name = "alb-${var.prefix}"
  }
}

########################################################################

# Target Group

resource "aws_lb_target_group" "nginx_target_group" {
  name     = "tg-nginx-${var.prefix}"
  port     = 3000
  protocol = "HTTP"
  vpc_id   = module.aws_vpc.vpc_id

  health_check {
    enabled             = true
    path                = "/health-check"
    protocol            = "HTTP"
    matcher             = "200-399"
    interval            = 30
    timeout             = 5
    healthy_threshold   = 2
    unhealthy_threshold = 3
  }
}

# Target 등록

resource "aws_lb_target_group_attachment" "nginx_attachment_azone" {
  target_group_arn = aws_lb_target_group.nginx_target_group.arn
  target_id        = aws_instance.service_azone.id
  port             = 3000
}

# resource "aws_lb_target_group_attachment" "nginx_attachment_czone" {
#   target_group_arn = aws_lb_target_group.nginx_target_group.arn
#   target_id        = aws_instance.service_czone.id
#   port             = 3000
# }

########################################################################

# ALB Listener

resource "aws_lb_listener" "http_redirect" {
  load_balancer_arn = aws_lb.alb.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type = "redirect"

    redirect {
      port        = "443"
      protocol    = "HTTPS"
      status_code = "HTTP_301"
    }
  }
}

resource "aws_lb_listener" "https" {
  load_balancer_arn = aws_lb.alb.arn
  port              = 443
  protocol          = "HTTPS"
  ssl_policy        = "ELBSecurityPolicy-2016-08"
  certificate_arn   = data.aws_acm_certificate.careerbee_cert.arn

  default_action {
    type = "fixed-response"

    fixed_response {
      content_type = "text/plain"
      message_body = "404 Not Found"
      status_code  = "404"
    }
  }
}

# Listener Rule

resource "aws_lb_listener_rule" "webhook_rule" {
  listener_arn     = aws_lb_listener.https.arn
  priority         = 10
  action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.nginx_target_group.arn
  }
  condition {
    host_header {
      values = ["webhook.dev.careerbee.co.kr"]
    }
  }
}

resource "aws_lb_listener_rule" "openvpn_rule" {
  listener_arn     = aws_lb_listener.https.arn
  priority         = 20
  action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.nginx_target_group.arn
  }
  condition {
    host_header {
      values = ["openvpn.dev.careerbee.co.kr"]
    }
  }
}

resource "aws_lb_listener_rule" "fe_rule" {
  listener_arn     = aws_lb_listener.https.arn
  priority         = 30
  action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.nginx_target_group.arn
  }
  condition {
    host_header {
      values = ["www.dev.careerbee.co.kr"]
    }
  }
}

resource "aws_lb_listener_rule" "be_rule" {
  listener_arn     = aws_lb_listener.https.arn
  priority         = 40
  action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.nginx_target_group.arn
  }
  condition {
    host_header {
      values = ["api.dev.careerbee.co.kr"]
    }
  }
}

resource "aws_lb_listener_rule" "ai_rule" {
  listener_arn     = aws_lb_listener.https.arn
  priority         = 50
  action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.nginx_target_group.arn
  }
  condition {
    host_header {
      values = ["ai.dev.careerbee.co.kr"]
    }
  }
}

########################################################################

# Route53

resource "aws_route53_record" "dev_alb" {
  zone_id = data.aws_route53_zone.dev.zone_id
  name    = ""
  type    = "A"

  alias {
    name                   = aws_lb.alb.dns_name
    zone_id                = aws_lb.alb.zone_id
    evaluate_target_health = true
  }
}

resource "aws_route53_record" "webhook_alb" {
  zone_id = data.aws_route53_zone.dev.zone_id
  name    = "webhook"
  type    = "A"

  alias {
    name                   = aws_lb.alb.dns_name
    zone_id                = aws_lb.alb.zone_id
    evaluate_target_health = true
  }
}

resource "aws_route53_record" "www_dev_alb" {
  zone_id = data.aws_route53_zone.dev.zone_id
  name    = "www"
  type    = "A"

  alias {
    name                   = aws_lb.alb.dns_name
    zone_id                = aws_lb.alb.zone_id
    evaluate_target_health = true
  }
}

resource "aws_route53_record" "api_dev_alb" {
  zone_id = data.aws_route53_zone.dev.zone_id
  name    = "api"
  type    = "A"

  alias {
    name                   = aws_lb.alb.dns_name
    zone_id                = aws_lb.alb.zone_id
    evaluate_target_health = true
  }
}

resource "aws_route53_record" "ai_dev_alb" {
  zone_id = data.aws_route53_zone.dev.zone_id
  name    = "ai"
  type    = "A"

  alias {
    name                   = aws_lb.alb.dns_name
    zone_id                = aws_lb.alb.zone_id
    evaluate_target_health = true
  }
}

resource "aws_route53_record" "openvpn_dev_alb" {
  zone_id = data.aws_route53_zone.dev.zone_id
  name    = "openvpn"
  type    = "A"

  alias {
    name                   = aws_lb.alb.dns_name
    zone_id                = aws_lb.alb.zone_id
    evaluate_target_health = true
  }
}

########################################################################

# WAF

resource "aws_wafv2_web_acl" "web_acl" {
  name        = "waf-${var.prefix}-acl"
  description = "WafACL for CareerBee"
  scope       = "REGIONAL"
  default_action {
    allow {}
  }
  
  visibility_config {
    cloudwatch_metrics_enabled = true
    metric_name                = "careerbeeWebACL"
    sampled_requests_enabled   = true
  }

  # AWS에서 제공하는 보안 규칙 모음
  rule {
    name     = "AWSManagedRulesCommonRuleSet"
    priority = 1
    override_action {
      none {}
    }
    statement {
      managed_rule_group_statement {
        name        = "AWSManagedRulesCommonRuleSet"
        vendor_name = "AWS"
      }
    }
    visibility_config {
      cloudwatch_metrics_enabled = true
      metric_name                = "AWSCommon"
      sampled_requests_enabled   = true
    }
  }

  # Rate Limiting 규칙
  rule {
    name     = "RateLimitPerIP"
    priority = 2
    action {
      block {}
    }
    statement {
      rate_based_statement {
        limit              = 2000
        aggregate_key_type = "IP"
      }
    }
    visibility_config {
      cloudwatch_metrics_enabled = true
      metric_name                = "RateLimit"
      sampled_requests_enabled   = true
    }
  }

  # # Geo Match 규칙 
  # rule {
  #   name     = "AllowOnlyKR"
  #   priority = 3
  #   action {
  #     block {}
  #   }
  #   statement {
  #     not_statement {
  #       statement {
  #         geo_match_statement {
  #           country_codes = ["KR"]
  #         }
  #       }
  #     }
  #   }
  #   visibility_config {
  #     cloudwatch_metrics_enabled = true
  #     metric_name                = "AllowOnlyKR"
  #     sampled_requests_enabled   = true
  #   }
  # }

  tags = {
    Name = "waf-${var.prefix}-acl"
  }
}

resource "aws_wafv2_web_acl_association" "waf_to_alb" {
  resource_arn = aws_lb.alb.arn
  web_acl_arn  = aws_wafv2_web_acl.web_acl.arn
}
